server/src/parser/ProgramParser.ts
// Generated from resources/Program.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ProgramListener } from "./ProgramListener";
import { ProgramVisitor } from "./ProgramVisitor";


export class ProgramParser extends Parser {
	public static readonly COMMENT = 1;
	public static readonly META = 2;
	public static readonly ROOT = 3;
	public static readonly HOME = 4;
	public static readonly STAR = 5;
	public static readonly DOTS = 6;
	public static readonly CONST = 7;
	public static readonly SLASH = 8;
	public static readonly COLON = 9;
	public static readonly COPY = 10;
	public static readonly ARROW = 11;
	public static readonly VERTEX = 12;
	public static readonly SIGMA = 13;
	public static readonly XI = 14;
	public static readonly PLUS = 15;
	public static readonly MINUS = 16;
	public static readonly QUESTION = 17;
	public static readonly SPACE = 18;
	public static readonly DOT = 19;
	public static readonly LSQ = 20;
	public static readonly RSQ = 21;
	public static readonly LB = 22;
	public static readonly RB = 23;
	public static readonly AT = 24;
	public static readonly RHO = 25;
	public static readonly HASH = 26;
	public static readonly EOL = 27;
	public static readonly BYTES = 28;
	public static readonly BOOL = 29;
	public static readonly STRING = 30;
	public static readonly INT = 31;
	public static readonly FLOAT = 32;
	public static readonly HEX = 33;
	public static readonly NAME = 34;
	public static readonly TEXT = 35;
	public static readonly BAD_CHARACTER = 36;
	public static readonly TAB = 37;
	public static readonly UNTAB = 38;
	public static readonly RULE_program = 0;
	public static readonly RULE_license = 1;
	public static readonly RULE_metas = 2;
	public static readonly RULE_objects = 3;
	public static readonly RULE_object = 4;
	public static readonly RULE_abstraction = 5;
	public static readonly RULE_attributes = 6;
	public static readonly RULE_attribute = 7;
	public static readonly RULE_label = 8;
	public static readonly RULE_tail = 9;
	public static readonly RULE_suffix = 10;
	public static readonly RULE_method = 11;
	public static readonly RULE_scope = 12;
	public static readonly RULE_application = 13;
	public static readonly RULE_htail = 14;
	public static readonly RULE_head = 15;
	public static readonly RULE_has = 16;
	public static readonly RULE_data = 17;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "license", "metas", "objects", "object", "abstraction", "attributes", 
		"attribute", "label", "tail", "suffix", "method", "scope", "application", 
		"htail", "head", "has", "data",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, "'Q'", "'QQ'", "'*'", "'...'", "'!'", 
		"'/'", "':'", "'''", "'>'", "'<'", "'&'", "'$'", "'+'", "'-'", "'?'", 
		"' '", "'.'", "'['", "']'", "'('", "')'", "'@'", "'^'", "'#'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "COMMENT", "META", "ROOT", "HOME", "STAR", "DOTS", "CONST", 
		"SLASH", "COLON", "COPY", "ARROW", "VERTEX", "SIGMA", "XI", "PLUS", "MINUS", 
		"QUESTION", "SPACE", "DOT", "LSQ", "RSQ", "LB", "RB", "AT", "RHO", "HASH", 
		"EOL", "BYTES", "BOOL", "STRING", "INT", "FLOAT", "HEX", "NAME", "TEXT", 
		"BAD_CHARACTER", "TAB", "UNTAB",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ProgramParser._LITERAL_NAMES, ProgramParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ProgramParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Program.g4"; }

	// @Override
	public get ruleNames(): string[] { return ProgramParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ProgramParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ProgramParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ProgramParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 37;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				{
				this.state = 36;
				this.license();
				}
				break;
			}
			this.state = 40;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ProgramParser.META) {
				{
				this.state = 39;
				this.metas();
				}
			}

			this.state = 42;
			this.objects();
			this.state = 43;
			this.match(ProgramParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public license(): LicenseContext {
		let _localctx: LicenseContext = new LicenseContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ProgramParser.RULE_license);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 47;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 45;
					this.match(ProgramParser.COMMENT);
					this.state = 46;
					this.match(ProgramParser.EOL);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 49;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public metas(): MetasContext {
		let _localctx: MetasContext = new MetasContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ProgramParser.RULE_metas);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 53;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 51;
				this.match(ProgramParser.META);
				this.state = 52;
				this.match(ProgramParser.EOL);
				}
				}
				this.state = 55;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === ProgramParser.META);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public objects(): ObjectsContext {
		let _localctx: ObjectsContext = new ObjectsContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ProgramParser.RULE_objects);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 61;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 57;
						this.match(ProgramParser.COMMENT);
						this.state = 58;
						this.match(ProgramParser.EOL);
						}
						}
					}
					this.state = 63;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
				}
				this.state = 64;
				this.object();
				this.state = 65;
				this.match(ProgramParser.EOL);
				}
				}
				this.state = 69;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ProgramParser.COMMENT) | (1 << ProgramParser.ROOT) | (1 << ProgramParser.HOME) | (1 << ProgramParser.STAR) | (1 << ProgramParser.DOTS) | (1 << ProgramParser.SIGMA) | (1 << ProgramParser.XI) | (1 << ProgramParser.LSQ) | (1 << ProgramParser.LB) | (1 << ProgramParser.AT) | (1 << ProgramParser.RHO) | (1 << ProgramParser.BYTES) | (1 << ProgramParser.BOOL) | (1 << ProgramParser.STRING) | (1 << ProgramParser.INT))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (ProgramParser.FLOAT - 32)) | (1 << (ProgramParser.HEX - 32)) | (1 << (ProgramParser.NAME - 32)) | (1 << (ProgramParser.TEXT - 32)))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public object(): ObjectContext {
		let _localctx: ObjectContext = new ObjectContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ProgramParser.RULE_object);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 73;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				{
				this.state = 71;
				this.abstraction();
				}
				break;

			case 2:
				{
				this.state = 72;
				this.application(0);
				}
				break;
			}
			this.state = 76;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				{
				this.state = 75;
				this.tail();
				}
				break;
			}
			this.state = 91;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 78;
					this.match(ProgramParser.EOL);
					this.state = 79;
					this.method();
					this.state = 81;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
					case 1:
						{
						this.state = 80;
						this.htail();
						}
						break;
					}
					this.state = 84;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === ProgramParser.SPACE) {
						{
						this.state = 83;
						this.suffix();
						}
					}

					this.state = 87;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 10, this._ctx) ) {
					case 1:
						{
						this.state = 86;
						this.tail();
						}
						break;
					}
					}
					}
				}
				this.state = 93;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public abstraction(): AbstractionContext {
		let _localctx: AbstractionContext = new AbstractionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, ProgramParser.RULE_abstraction);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 98;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ProgramParser.COMMENT) {
				{
				{
				this.state = 94;
				this.match(ProgramParser.COMMENT);
				this.state = 95;
				this.match(ProgramParser.EOL);
				}
				}
				this.state = 100;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 101;
			this.attributes();
			this.state = 109;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 14, this._ctx) ) {
			case 1:
				{
				{
				this.state = 102;
				this.suffix();
				this.state = 106;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 13, this._ctx) ) {
				case 1:
					{
					this.state = 103;
					this.match(ProgramParser.SPACE);
					this.state = 104;
					this.match(ProgramParser.SLASH);
					this.state = 105;
					_la = this._input.LA(1);
					if (!(_la === ProgramParser.QUESTION || _la === ProgramParser.NAME)) {
					this._errHandler.recoverInline(this);
					} else {
						if (this._input.LA(1) === Token.EOF) {
							this.matchedEOF = true;
						}

						this._errHandler.reportMatch(this);
						this.consume();
					}
					}
					break;
				}
				}
				}
				break;

			case 2:
				{
				this.state = 108;
				this.htail();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attributes(): AttributesContext {
		let _localctx: AttributesContext = new AttributesContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, ProgramParser.RULE_attributes);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this.match(ProgramParser.LSQ);
			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ProgramParser.AT || _la === ProgramParser.NAME) {
				{
				this.state = 112;
				this.attribute();
				this.state = 117;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ProgramParser.SPACE) {
					{
					{
					this.state = 113;
					this.match(ProgramParser.SPACE);
					this.state = 114;
					this.attribute();
					}
					}
					this.state = 119;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 122;
			this.match(ProgramParser.RSQ);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attribute(): AttributeContext {
		let _localctx: AttributeContext = new AttributeContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, ProgramParser.RULE_attribute);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 124;
			this.label();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public label(): LabelContext {
		let _localctx: LabelContext = new LabelContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, ProgramParser.RULE_label);
		try {
			this.state = 131;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ProgramParser.AT:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 126;
				this.match(ProgramParser.AT);
				}
				break;
			case ProgramParser.NAME:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 127;
				this.match(ProgramParser.NAME);
				this.state = 129;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 17, this._ctx) ) {
				case 1:
					{
					this.state = 128;
					this.match(ProgramParser.DOTS);
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public tail(): TailContext {
		let _localctx: TailContext = new TailContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, ProgramParser.RULE_tail);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this.match(ProgramParser.EOL);
			this.state = 134;
			this.match(ProgramParser.TAB);
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 135;
				this.object();
				this.state = 136;
				this.match(ProgramParser.EOL);
				}
				}
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ProgramParser.COMMENT) | (1 << ProgramParser.ROOT) | (1 << ProgramParser.HOME) | (1 << ProgramParser.STAR) | (1 << ProgramParser.DOTS) | (1 << ProgramParser.SIGMA) | (1 << ProgramParser.XI) | (1 << ProgramParser.LSQ) | (1 << ProgramParser.LB) | (1 << ProgramParser.AT) | (1 << ProgramParser.RHO) | (1 << ProgramParser.BYTES) | (1 << ProgramParser.BOOL) | (1 << ProgramParser.STRING) | (1 << ProgramParser.INT))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (ProgramParser.FLOAT - 32)) | (1 << (ProgramParser.HEX - 32)) | (1 << (ProgramParser.NAME - 32)) | (1 << (ProgramParser.TEXT - 32)))) !== 0));
			this.state = 142;
			this.match(ProgramParser.UNTAB);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public suffix(): SuffixContext {
		let _localctx: SuffixContext = new SuffixContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, ProgramParser.RULE_suffix);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 144;
			this.match(ProgramParser.SPACE);
			this.state = 145;
			this.match(ProgramParser.ARROW);
			this.state = 146;
			this.match(ProgramParser.SPACE);
			this.state = 147;
			this.label();
			this.state = 149;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 20, this._ctx) ) {
			case 1:
				{
				this.state = 148;
				this.match(ProgramParser.CONST);
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public method(): MethodContext {
		let _localctx: MethodContext = new MethodContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, ProgramParser.RULE_method);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 151;
			this.match(ProgramParser.DOT);
			this.state = 152;
			_localctx._mtd = this._input.LT(1);
			_la = this._input.LA(1);
			if (!(((((_la - 12)) & ~0x1F) === 0 && ((1 << (_la - 12)) & ((1 << (ProgramParser.VERTEX - 12)) | (1 << (ProgramParser.AT - 12)) | (1 << (ProgramParser.RHO - 12)) | (1 << (ProgramParser.NAME - 12)))) !== 0))) {
				_localctx._mtd = this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 154;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 21, this._ctx) ) {
			case 1:
				{
				this.state = 153;
				this.match(ProgramParser.COPY);
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public scope(): ScopeContext {
		let _localctx: ScopeContext = new ScopeContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, ProgramParser.RULE_scope);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			this.match(ProgramParser.LB);
			this.state = 157;
			this.application(0);
			this.state = 158;
			this.match(ProgramParser.RB);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public application(): ApplicationContext;
	public application(_p: number): ApplicationContext;
	// @RuleVersion(0)
	public application(_p?: number): ApplicationContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ApplicationContext = new ApplicationContext(this._ctx, _parentState);
		let _prevctx: ApplicationContext = _localctx;
		let _startState: number = 26;
		this.enterRecursionRule(_localctx, 26, ProgramParser.RULE_application, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 169;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ProgramParser.COMMENT:
			case ProgramParser.ROOT:
			case ProgramParser.HOME:
			case ProgramParser.STAR:
			case ProgramParser.DOTS:
			case ProgramParser.SIGMA:
			case ProgramParser.XI:
			case ProgramParser.LSQ:
			case ProgramParser.AT:
			case ProgramParser.RHO:
			case ProgramParser.BYTES:
			case ProgramParser.BOOL:
			case ProgramParser.STRING:
			case ProgramParser.INT:
			case ProgramParser.FLOAT:
			case ProgramParser.HEX:
			case ProgramParser.NAME:
			case ProgramParser.TEXT:
				{
				this.state = 161;
				this.head();
				this.state = 163;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 22, this._ctx) ) {
				case 1:
					{
					this.state = 162;
					this.htail();
					}
					break;
				}
				}
				break;
			case ProgramParser.LB:
				{
				this.state = 165;
				this.scope();
				this.state = 167;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 23, this._ctx) ) {
				case 1:
					{
					this.state = 166;
					this.htail();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 188;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 29, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 186;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 28, this._ctx) ) {
					case 1:
						{
						_localctx = new ApplicationContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, ProgramParser.RULE_application);
						this.state = 171;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 172;
						this.method();
						this.state = 174;
						this._errHandler.sync(this);
						switch ( this.interpreter.adaptivePredict(this._input, 25, this._ctx) ) {
						case 1:
							{
							this.state = 173;
							this.htail();
							}
							break;
						}
						}
						break;

					case 2:
						{
						_localctx = new ApplicationContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, ProgramParser.RULE_application);
						this.state = 176;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 177;
						this.has();
						this.state = 179;
						this._errHandler.sync(this);
						switch ( this.interpreter.adaptivePredict(this._input, 26, this._ctx) ) {
						case 1:
							{
							this.state = 178;
							this.htail();
							}
							break;
						}
						}
						break;

					case 3:
						{
						_localctx = new ApplicationContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, ProgramParser.RULE_application);
						this.state = 181;
						if (!(this.precpred(this._ctx, 1))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
						}
						this.state = 182;
						this.suffix();
						this.state = 184;
						this._errHandler.sync(this);
						switch ( this.interpreter.adaptivePredict(this._input, 27, this._ctx) ) {
						case 1:
							{
							this.state = 183;
							this.htail();
							}
							break;
						}
						}
						break;
					}
					}
				}
				this.state = 190;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 29, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public htail(): HtailContext {
		let _localctx: HtailContext = new HtailContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, ProgramParser.RULE_htail);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 209;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					this.state = 209;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 30, this._ctx) ) {
					case 1:
						{
						this.state = 191;
						this.match(ProgramParser.SPACE);
						this.state = 192;
						this.head();
						}
						break;

					case 2:
						{
						this.state = 193;
						this.match(ProgramParser.SPACE);
						this.state = 194;
						this.application(0);
						this.state = 195;
						this.method();
						}
						break;

					case 3:
						{
						this.state = 197;
						this.match(ProgramParser.SPACE);
						this.state = 198;
						this.scope();
						}
						break;

					case 4:
						{
						this.state = 199;
						this.match(ProgramParser.SPACE);
						this.state = 200;
						this.application(0);
						this.state = 201;
						this.has();
						}
						break;

					case 5:
						{
						this.state = 203;
						this.match(ProgramParser.SPACE);
						this.state = 204;
						this.application(0);
						this.state = 205;
						this.suffix();
						}
						break;
